--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Django==4.1
 sqlparse==0.4.2
 tzdata==2022.2
 gunicorn==20.1.0
-heroku==0.1.4
+heroku
 whitenoise==6.2.0
 django-heroku==0.3.1
 Pillow==9.2.0
